--- a/backend/public/static/style.css
+++ b/backend/public/static/style.css
@@ -4,3 +4,21 @@ body {
   background-color: rgba(236, 236, 236, 0.877);
   margin: 0;
 }
+
+.container {
+  width: 80%;
+  margin: 0 auto;
+}
+.container a {
+  text-decoration: none;
+  color: inherit;
+}
+.posts_wrapper {
+  width: calc(100% - 80px);
+  background-color: #fff;
+  margin: 1%;
+  padding: 1%;
+}
+.fs-10 {
+  font-size: 10px;
+}
