--- a/backend/public/static/style.css
+++ b/backend/public/static/style.css
@@ -1,10 +1,59 @@
+/* global */
 body {
   width: auto;
   height: 100%;
   background-color: rgba(236, 236, 236, 0.877);
   margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+h1 a {
+  text-decoration: none;
+  color: inherit;
+}
+ul {
+  list-style: none;
+}
+ul li a {
+  text-decoration: none;
+  color: inherit;
+  display: block;
+  margin-right: 25px;
 }
 
+
+/* gNav */
+.globalNav {
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  max-width: 1400px;
+}
+.globalNav .contents__wrap {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0 auto;
+  padding: 0 60px;
+  background-color: rgb(255, 255, 255);
+}
+.globalNav .contents__wrap .contents__menu {
+  display: flex;
+  align-items: center;
+}
+.globalNav .contents__wrap .contents__lists {
+  display: flex;
+}
+.globalNav .contents__wrap li {
+  margin-right: 0%;
+}
+
+
+/* posts */
 .container {
   width: 80%;
   margin: 0 auto;
